# CBORBenchmark

./: .gitignore  CMakeLists.txt  README
benchmarks/: CMakeLists.txt  cbor_item.h  data_generator.h  people.h  people_info.json  person_info.h  person_info.json  serializer.h  utils.h
benchmarks/json/: TestAPI.cpp
benchmarks/libcbor/: TestAPI.cpp  array_big.cpp  map_small.cpp  student_small.cpp  test_libcbor.cpp  test_tinycbor.cpp
benchmarks/tests/: test_libcbor.cpp  test_tinycbor.cpp
benchmarks/tinycbor/: array_big.cpp  map_small.cpp  student_small.cpp
include/: CMakeLists.txt
include/json/: CMakeLists.txt
include/json/doc/html/: Nodes.xml  Tokens.xml  annotated.html  classes.html  classnlohmann_1_1basic__json-members.html  classnlohmann_1_1basic__json.html  classnlohmann_1_1basic__json_1_1iter__impl-members.html  classnlohmann_1_1basic__json_1_1iter__impl.html  classnlohmann_1_1basic__json_1_1iter__impl_a0c3a102ac61d4c6f869fe9a5d065e91e.html  classnlohmann_1_1basic__json_1_1iter__impl_a170970e99b7a6d124da0fffa4cb76dba.html  classnlohmann_1_1basic__json_1_1iter__impl_a2597c381f70b376336bd4faa87fadc28.html  classnlohmann_1_1basic__json_1_1iter__impl_a3b16b57ca5c27303ec791d16ed070c77.html  classnlohmann_1_1basic__json_1_1iter__impl_a3b4cd7db9a93609f8e05f1759d38d633.html  classnlohmann_1_1basic__json_1_1iter__impl_a3cd2dca936473ea57656328ab6dc9138.html  classnlohmann_1_1basic__json_1_1iter__impl_a3d42252a98141557f61e2ceb1cb7f06f.html  classnlohmann_1_1basic__json_1_1iter__impl_a3dddd7fa38b36e2531700ceb4a1ce9a8.html  classnlohmann_1_1basic__json_1_1iter__impl_a3e45be67e4384b3eacb72bd6147a6a91.html  classnlohmann_1_1basic__json_1_1iter__impl_a4d0518f3f2edae9dbaf7ef02f4f20add.html  classnlohmann_1_1basic__json_1_1iter__impl_a50c5d20f733bfe2b13d67366102ba3fe.html  classnlohmann_1_1basic__json_1_1iter__impl_a60e2723dae1c6d537fc914c664f1a81c.html  classnlohmann_1_1basic__json_1_1iter__impl_a74e26f187519bc7181b825b8f38a4e93.html  classnlohmann_1_1basic__json_1_1iter__impl_a8f17cacd2b5ac9824b9d3de4788ea0d3.html  classnlohmann_1_1basic__json_1_1iter__impl_a926f2f9189403e72e4f694a06d4d021a.html  classnlohmann_1_1basic__json_1_1iter__impl_a9418faa633b30a3621a672860b285c3a.html  classnlohmann_1_1basic__json_1_1iter__impl_a94c010c069b5aed9e064e0579eac9a64.html  classnlohmann_1_1basic__json_1_1iter__impl_a958c52d01ed6594c8052bfd42868714e.html  classnlohmann_1_1basic__json_1_1iter__impl_a9fd84e884e8474c000dc966d331a4854.html  classnlohmann_1_1basic__json_1_1iter__impl_aa3d908ee643e5938d32e5f6d261d7715.html  classnlohmann_1_1basic__json_1_1iter__impl_aa496f5348569e75d65592f25e1664770.html  classnlohmann_1_1basic__json_1_1iter__impl_aa78b38099b3b47838e4f522ad255391d.html  classnlohmann_1_1basic__json_1_1json__pointer-members.html  (+258 more)
include/libcbor/: .travis-qemu.sh  CMakeLists.txt  Doxyfile  cppcheck_suppressions.txt
include/libcbor/demo/: hello_cbor.c
include/libcbor/doc/: doxy_frontpage.md
include/libcbor/examples/: CMakeLists.txt  hello.c  readfile.c  streaming_parser.c
include/libcbor/test/: cpp_linkage_test.cpp
include/nonius/: CMakeLists.txt
include/nonius/doc/: benchmarks.md  keybase.txt
include/nonius/tpl/: html_report.g.tpl
include/tinycbor/: CMakeLists.txt  Doxyfile  Makefile  Makefile.nmake  tinycbor.pc  tinycbor.pc.in
include/tinycbor/src/: cbor.dox
serializer/: CMakeLists.txt  cbor_item.h  item.h  libcbor_serializer.backup.h  libcbor_serializer.h  main.cpp  serializer.h  tinycbor_serializer.h
(+175 files in other folders)
